--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<!-- styles -->
+<!-- Styles -->
 <link href="style.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Helvetica:300" rel="stylesheet">
 <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
