C BON CA MARCHE

--- a/index.html
+++ b/index.html
@@ -1,65 +1,90 @@
 <html>
+
 <head>
-<meta charset="UTF-8">
-<!-- Styles -->
-<link href="style.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Helvetica:300" rel="stylesheet">
-<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-<script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
-<script language="javascript" type="text/javascript" src="badinter_2.js"></script> 
-<script language="javascript" type="text/javascript" src="badinter_3.js"></script> 
-<script language="javascript" type="text/javascript" src="badinter_4.js"></script>
+    <meta charset="UTF-8">
+    <!-- Styles -->
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Helvetica:300" rel="stylesheet">
+    <!-- Librairies -->
+    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
+
+    <!-- Scripts -->
+    <script language="javascript" type="text/javascript" src="scripts/index.js"></script>
 
 </head>
 
 <body>
-<div class="container">
-  <div class="pages">
-    <div class="page page1">
-"
-      <div class="page-content"> 
-        <blockquote class="citation"> <a href="page1.html">« Il n’est point d’hommes <br>
-          en cette terre <br>
-          dont la culpabilité <br>
-          soit totale <br>
-          et dont il faille pour toujours<br>
-          désespérer totalement. »</a> </blockquote>
-      </div>
-
+    <div class="container">
+        <div class="pages" id="pages">
+            <div class="page page1">
+                <div class="page-content">
+                    <blockquote class="citation">
+                        <a href="page1.html">« Il n’est point d’hommes
+                            <br> en cette terre
+                            <br> dont la culpabilité
+                            <br> soit totale
+                            <br> et dont il faille pour toujours
+                            <br> désespérer totalement. »</a>
+                    </blockquote>
+                    <svg onclick="goPage2()" class="arrow" width="64" height="64" viewBox="0 0 64 64">
+                        <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="page page2">
+                <div class="page-content">
+                    <svg onclick="goPage1()" class="arrow previous" width="64" height="64" viewBox="0 0 64 64">
+                        <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
+                    </svg>
+                    <blockquote class="citation">
+                        <a href="page2.html">« La passion meurtrière
+                            <br> n’est pas arrêtée par
+                            <br> la peur de la mort,
+                            <br> il n’y a pas dans la peine de mort de valeur dissuasive. »</a>
+                    </blockquote>
+                    <svg onclick="goPage3()" class="arrow" width="64" height="64" viewBox="0 0 64 64">
+                        <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="page page3">
+                <div class="page-content">
+                    <svg onclick="goPage2()" class="arrow previous" width="64" height="64" viewBox="0 0 64 64">
+                        <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
+                    </svg>
+                    <blockquote class="citation">
+                        <a href="page3.html">« Cette conception-là
+                            <br> de la justice
+                            <br> n’est pas celle
+                            <br> des pays de liberté. » </a>
+                    </blockquote>
+                    <svg onclick="goPage4()" class="arrow" width="64" height="64" viewBox="0 0 64 64">
+                        <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="page page4">
+                <div class="page-content">
+                        <svg onclick="goPage3()" class="arrow previous" width="64" height="64" viewBox="0 0 64 64">
+                            <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
+                        </svg>
+                    <blockquote class="citation">
+                        <a href="page4.html">« Demain,
+                            <br> la justice française ne sera plus une justice qui tue
+                            <br> (...)
+                            <br> et demain
+                            <br> les pages sanglantes de notre justice seront tournées. (...)
+                            <br>
+                            <br> Demain, c’est l’abolition.
+                            <br> Législateurs français,
+                            <br> de tout mon coeur,
+                            <br> je vous remercie. »</a>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="page page2">
-      <div class="page-content">
-        <blockquote class="citation"> <a href="page2.html">« La passion meurtrière<br>
-          n’est pas arrêtée par <br>
-          la peur de la mort, <br>
-          il n’y a pas dans la peine de mort 
-          de valeur dissuasive. »</a> </blockquote>
-      </div>
-    </div>
-    <div class="page page3">
-      <div class="page-content">
-        <blockquote class="citation"> <a href="page3.html">« Cette conception-là<br>
-          de la justice <br>
-          n’est pas 
-          celle <br>
-          des pays de liberté. » </a> </blockquote>
-      </div>
-    </div>
-    <div class="page page4">
-      <div class="page-content">
-        <blockquote class="citation"> <a href="page4.html">« Demain,<br>
-          la justice française ne sera plus une justice qui tue <br>
-          (...) <br>
-          et demain<br>
-          les pages sanglantes de notre justice seront tournées. (...)<br>
-          <br>
-          Demain, c’est l’abolition.<br>
-          Législateurs français,<br>
-          de tout mon coeur, <br>
-          je vous remercie. »</a> </blockquote>
-      </div>
-    </div>
-  </div>
-</div>
 </body>
+
 </html>
