--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
 
     <!-- Scripts -->
-    <script language="javascript" type="text/javascript" src="scripts/index.js"></script>
+    <script language="javascript" type="text/javascript" src="index.js"></script>
 
 </head>
 
