Retour à l'index, titres

--- a/carte1.html
+++ b/carte1.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
 <title>Carte 1</title>
+<link href="cartes.css" rel="stylesheet" type="text/css">
+<link href="styles_page1.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<img src="cartes/carte_1.jpg";
-    height="100%";
-    width="100%";
-
+<a href="./index.html"> Retour à l'index </a> 
+ <img src="cartes/carte_1.jpg" />
 </body>
 </html>
