--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <!-- Scripts -->
 <script language="javascript" type="text/javascript" src="index.js"></script>
+<title>La peine de mort</title>
 </head>
 
 <body>
