--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="content">  <a href="cartes/carte_1.jpg">
+<div class="content">  <a href="carte1.html">
   <div class="beat"> 93 pays ont aboli la peine de mort pour tous les crimes </div>
 	</a>
 </div>
