--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="content"> <a href="cartes/carte_3.jpg"
+<div class="content"> <a href="carte3.html"
   
   <div class="beat"> 36 pays peuvent être considérés comme abolitionnistes de facto. </div>
 </div>
