--- a/page4.html
+++ b/page4.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="content"> <a href="cartes/carte_4.jpg"
+<div class="content"> <a href="carte4.html"
   <div class="beat"> Mais 81 pays continuent à procéder à des exécutions, <br>
     particulièrement en Asie,
     en Afrique <br>
