--- a/carte2.html
+++ b/carte2.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Document sans nom</title>
-<link href="styles_page3.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
+<title>Carte 2</title>
+<link href="cartes.css" rel="stylesheet" type="text/css">
+<link href="styles_page2.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<img src="cartes/carte_2.jpg";
-    height="100%";
-    width="100%";
+<a href="./index.html"> Retour à l'index </a> <img src="cartes/carte_2.jpg";
 </body>
 </html>
