--- a/carte4.html
+++ b/carte4.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Document sans nom</title>
-</head>
+<link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
+<title>Carte 4</title>
+<link href="cartes.css" rel="stylesheet" type="text/css">
+<link href="styles_page4.css" rel="stylesheet" type="text/css">
 
+</head>
 <body>
+<a href="./index.html"> Retour à l'index </a> <img src="cartes/carte_3.jpg";
 <img src="cartes/carte_4.jpg";
-    height="100%";
-    width="100%";
 </body>
 </html>
