--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="content"> <a href="cartes/carte_2.jpg">
+<div class="content"> <a href="carte2.html">
   <div class="beat"> 9 l’ont aboli pour tous les crimes sauf crimes exceptionnels, <br>
     tels que ceux commis en temps de guerre</div>
  </div>
