--- a/page1.html
+++ b/page1.html
@@ -15,6 +15,8 @@
   <div class="beat"> 93 pays ont aboli la peine de mort pour tous les crimes </div>
 	</a>
 </div>
-<sound src="assets/Battement_de_coeur.wav"
+<audio controls="controls">
+  <source src="assets/battement_de_coeur.wav" type="audio/wav" autoplay/>
+</audio>
 </body>
 </html>
