--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,8 @@
   
   <div class="beat"> 36 pays peuvent être considérés comme abolitionnistes de facto. </div>
 </div>
-<sound src="assets/battement_de_coeur.wav"
+
+<embed src="assets/battement_de_coeur.wav" hidden="false" autostart="true"/>
 
 </body>
 </html>
