--- a/page4.html
+++ b/page4.html
@@ -17,6 +17,6 @@
     en Afrique <br>
     et en Amérique du nord.</div>
 </div>
-<sound src="assets/Battement_de_coeur.wav"
+<embed src="assets/battement_de_coeur.wav" hidden="false" autostart="true"/>
 </body>
 </html>
