--- a/carte3.html
+++ b/carte3.html
@@ -9,6 +9,6 @@
 </head>
 
 <body>
-<a href="./index.html"> Retour à l'index</a> <img src="cartes/carte_3.jpg";
+<a href="./index.html"> Retour à l'index</a> <img src="cartes/carte_3.jpg";/>
 </body>
 </html>
