--- a/page1.html
+++ b/page1.html
@@ -15,8 +15,8 @@
   <div class="beat"> 93 pays ont aboli la peine de mort pour tous les crimes </div>
 	</a>
 </div>
-<audio controls="controls">
-  <source src="assets/battement_de_coeur.wav" type="audio/wav" autoplay/>
+<audio autoplay loop>
+  <source src="assets/battement_de_coeur.wav" type="audio/wav"/>
 </audio>
 </body>
 </html>
