--- a/page3.html
+++ b/page3.html
@@ -16,7 +16,9 @@
   <div class="beat"> 36 pays peuvent être considérés comme abolitionnistes de facto. </div>
 </div>
 
-<embed src="assets/battement_de_coeur.wav" hidden="false" autostart="true"/>
+<audio autoplay loop>
+  <source src="assets/battement_de_coeur.wav" type="audio/wav"/>
+</audio>
 
 </body>
 </html>
