--- a/page4.html
+++ b/page4.html
@@ -17,6 +17,8 @@
     en Afrique <br>
     et en Amérique du nord.</div>
 </div>
-<embed src="assets/battement_de_coeur.wav" hidden="false" autostart="true"/>
+<audio autoplay loop>
+  <source src="assets/battement_de_coeur.wav" type="audio/wav"/>
+</audio>
 </body>
 </html>
