--- a/carte1.html
+++ b/carte1.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-<a href="./index.html"> Retour à l'index </a> 
- <img src="cartes/carte_1.jpg" />
+<a href="./index.html"> Retour à l'index </a> <img src="cartes/carte_1.jpg" />
 </body>
 </html>
