--- a/carte4.html
+++ b/carte4.html
@@ -9,7 +9,6 @@
 
 </head>
 <body>
-<a href="./index.html"> Retour à l'index </a> <img src="cartes/carte_3.jpg";
-<img src="cartes/carte_4.jpg";
+<a href="./index.html"> Retour à l'index </a> <img src="cartes/carte_4.jpg";/>
 </body>
 </html>
