--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
 <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
 <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
-<script language="javascript" type="text/javascript" src="sketch_171030d.js"></script> 
+<script language="javascript" type="text/javascript" src="sketch_171030d.js"></script>
 <meta charset="UTF-8">
 <title>9 pays</title>
 </head>
@@ -14,7 +14,9 @@
 <div class="content"> <a href="carte2.html">
   <div class="beat"> 9 l’ont aboli pour tous les crimes sauf crimes exceptionnels, <br>
     tels que ceux commis en temps de guerre</div>
- </div>
-<embed src="assets/battement_de_coeur.wav" hidden="false" autostart="true"/>
+</div>
+<audio autoplay loop>
+  <source src="assets/battement_de_coeur.wav" type="audio/wav"/>
+</audio>
 </body>
 </html>
