Mots modifiés, taille des flèches, son page 1

--- a/index.html
+++ b/index.html
@@ -21,45 +21,45 @@
           dont la culpabilité soit totale <br>
           et dont il faille pour toujours <br>
           désespérer totalement. </a> </blockquote>
-        <svg onclick="goPage2()" class="arrow" width="64" height="64" viewBox="0 0 64 64">
+        <svg onclick="goPage2()" class="arrow" width="45" height="45" viewBox="0 0 64 64">
           <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
         </svg>
       </div>
     </div>
     <div class="page page2">
       <div class="page-content">
-        <svg onclick="goPage1()" class="arrow previous" width="64" height="64" viewBox="0 0 64 64">
+        <svg onclick="goPage1()" class="arrow previous" width="45" height="45" viewBox="0 0 64 64">
           <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
         </svg>
-        <blockquote class="citation"> <a href="page2.html"> La passion meurtrière <br>
+        <blockquote class="citation"> <a href="page2.html"> La passion criminelle <br>
           n’est pas arrêtée par la peur de la mort, <br>
           il n’y a pas dans la peine de mort <br>
           de valeur dissuasive. </a> </blockquote>
-        <svg onclick="goPage3()" class="arrow" width="64" height="64" viewBox="0 0 64 64">
+        <svg onclick="goPage3()" class="arrow" width="45" height="45" viewBox="0 0 64 64">
           <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
         </svg>
       </div>
     </div>
     <div class="page page3">
       <div class="page-content">
-        <svg onclick="goPage2()" class="arrow previous" width="64" height="64" viewBox="0 0 64 64">
+        <svg onclick="goPage2()" class="arrow previous" width="45" height="45" viewBox="0 0 64 64">
           <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
         </svg>
         <blockquote class="citation"> <a href="page3.html"> Cette conception-là de la justice <br>
           n’est pas celle des pays de liberté. </a> </blockquote>
-        <svg onclick="goPage4()" class="arrow" width="64" height="64" viewBox="0 0 64 64">
+        <svg onclick="goPage4()" class="arrow" width="45" height="45" viewBox="0 0 64 64">
           <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
         </svg>
       </div>
     </div>
     <div class="page page4">
       <div class="page-content">
-        <svg onclick="goPage3()" class="arrow previous" width="64" height="64" viewBox="0 0 64 64">
+        <svg onclick="goPage3()" class="arrow previous" width="45" height="45" viewBox="0 0 64 64">
           <path d="M32.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z"></path>
         </svg>
         <blockquote class="citation"> <a href="page4.html"> Demain, <br>
-          la justice française ne sera plus une justice qui tue <br>
-          et demain <br>
+          la justice française ne sera plus une justice qui tue. <br>
+          Demain, <br>
           les pages sanglantes de notre justice seront tournées. <br>
           <br>
           <br>
